# openstep-plist

./: .appveyor.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  aplist.pxd  aplist.pyx  config.sh  pyproject.toml  setup.py  test_aplist.pyx  tox.ini
.github/workflows/: wheels.yml
src/aplist/: __init__.py  __main__.py  _aplist.pxd  _aplist.pyx
src/openstep_plist/: __init__.py  __main__.py  _compat.pxd  _compat.pyx  _parser.pxd  _parser.pyx  _test.pyx  parser.pxd  parser.pyx  util.pxd  util.pyx  writer.pxd  writer.pyx
tests/: cdef_wrappers.pyx  setup.py  test_aplist.py  test_aplist.pyx  test_parser.py  test_writer.py
